--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="assets/logo.png" alt="Airsoft Klub Kojot Logo" />
+      <img src="assets/logo.png" alt="Logo" style="height: 50px;" />
     </div>
     <nav>
       <ul>
