--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
   <header>
-    <div class="logo">
-      <img src="assets/logo.png" alt="Logo" style="height: 50px;" />
+   <nav>
+  <div class="nav-container">
+    <img src="assets/logo.png" alt="Airsoft Klub Kojot Logo" class="logo" />
+    <div class="nav-links">
+      <a href="index.html">Početna</a>
+      <a href="about.html">O nama</a>
+      <a href="gallery.html">Galerija</a>
+      <a href="contact.html">Kontakt</a>
     </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Početna</a></li>
-        <li><a href="about.html">O nama</a></li>
-        <li><a href="gallery.html">Galerija</a></li>
-        <li><a href="contact.html">Kontakt</a></li>
-      </ul>
-    </nav>
+  </div>
+</nav>
   </header>
 
   <main>
