--- a/gallery.html
+++ b/gallery.html
@@ -2,8 +2,8 @@
 <html lang="sr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Galerija | Airsoft Klub Kojot</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Airsoft Klub Kojot</title>
   <link rel="stylesheet" href="css/style.css" />
   <script defer src="js/script.js"></script>
 </head>
