--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
     <h1>Galerija</h1>
     <div class="gallery-grid">
       <!-- Zameni ove slike svojim kada ih budeš imao -->
-      <img src="slika.jpg" alt="Akcija 1" />
+      <img src="slika.img" alt="Akcija 1" />
       <img src="assets/sample2.jpg" alt="Akcija 2" />
       <img src="assets/sample3.jpg" alt="Akcija 3" />
       <img src="assets/sample4.jpg" alt="Akcija 4" />
