--- a/index.html
+++ b/index.html
@@ -8,25 +8,50 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <div class="logo-container">
-                <img src="assets/logo.png" alt="Airsoft Klub Kojot" class="logo">
+    <header class="hero-header">
+        <div class="overlay">
+            <nav class="navbar">
+                <div class="logo-container">
+                    <img src="assets/logo.png" alt="Airsoft Klub Kojot" class="logo">
+                </div>
+                <ul class="nav-links">
+                    <li><a href="index.html">Početna</a></li>
+                    <li><a href="about.html">O nama</a></li>
+                    <li><a href="gallery.html">Galerija</a></li>
+                    <li><a href="contact.html">Kontakt</a></li>
+                </ul>
+            </nav>
+            <div class="hero-content">
+                <h1>Airsoft Klub Kojot</h1>
+                <p>Vaš tim za adrenalinske avanture i akciju</p>
+                <a href="about.html" class="btn">Saznaj više</a>
             </div>
-            <ul class="nav-links">
-                <li><a href="index.html">Početna</a></li>
-                <li><a href="about.html">O nama</a></li>
-                <li><a href="gallery.html">Galerija</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
-            </ul>
-        </nav>
+        </div>
     </header>
 
-    <section class="hero">
-        <div class="hero-text">
-            <h1>Dobrodošli u Airsoft Klub Kojot</h1>
-            <p>Strast, timski rad i adrenalinska zabava</p>
-            <a href="about.html" class="btn">Saznaj više</a>
+    <section class="about-section">
+        <div class="container">
+            <h2>O nama</h2>
+            <p>Airsoft Klub Kojot okuplja zaljubljenike u airsoft iz cijelog regiona. Naša misija je promocija timskog duha, discipline i adrenalina kroz realistične scenarije borbe. Organizujemo treninge, igre i turnire za sve uzraste i nivoe iskustva.</p>
+        </div>
+    </section>
+
+    <section class="gallery-section">
+        <div class="container">
+            <h2>Galerija</h2>
+            <div class="gallery-grid">
+                <img src="assets/slike/slika1.jpg" alt="Akcija 1">
+                <img src="assets/slike/slika2.jpg" alt="Akcija 2">
+                <img src="assets/slike/slika3.jpg" alt="Akcija 3">
+                <img src="assets/slike/slika4.jpg" alt="Akcija 4">
+            </div>
+        </div>
+    </section>
+
+    <section class="contact-section">
+        <div class="container">
+            <h2>Kontaktirajte nas</h2>
+            <p>Za više informacija ili prijave, javite nam se putem emaila <a href="mailto:info@airsoftklubkojot.com">info@airsoftklubkojot.com</a> ili pratite naše društvene mreže.</p>
         </div>
     </section>
 
