--- a/about.html
+++ b/about.html
@@ -1,33 +1,6 @@
-<!DOCTYPE html>
-<html lang="sr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>O nama | Airsoft Klub Kojot</title>
-  <link rel="stylesheet" href="css/style.css" />
-  <script defer src="js/script.js"></script>
-</head>
-<body>
-  <header>
-    <div class="logo"><img src="assets/logo.png" alt="Logo" /></div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Početna</a></li>
-        <li><a href="about.html" class="active">O nama</a></li>
-        <li><a href="gallery.html">Galerija</a></li>
-        <li><a href="contact.html">Kontakt</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main class="content">
-    <h1>O nama</h1>
-    <p>Airsoft Klub Kojot okuplja zaljubljenike u airsoft, timsku igru i vojnu taktiku. Naša misija je da promovišemo fer-plej, timski duh i aktivan život.</p>
-    <p>Treninge i susrete organizujemo vikendom na raznim terenima u prirodi. Svi članovi imaju pristup opremi i edukaciji za bezbedno igranje.</p>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Airsoft Klub Kojot.</p>
-  </footer>
-</body>
-</html>
+<section class="about-section" id="about">
+  <div class="container">
+    <h2>O nama</h2>
+    <p>Airsoft Klub Kojot je osnovan s ciljem okupljanja entuzijasta koji žele iskusiti timsku igru, strategiju i adrenalinske trenutke na terenu. Naše članstvo je otvoreno za sve uzraste, a pružamo i opremu te treninge za početnike. Organizujemo razne tipove igara – od malih scenarija do velikih turnira sa drugim klubovima u regiji.</p>
+  </div>
+</section>
