--- a/gallery.html
+++ b/gallery.html
@@ -1,38 +1,13 @@
-<!DOCTYPE html>
-<html lang="sr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Airsoft Klub Kojot</title>
-  <link rel="stylesheet" href="css/style.css" />
-  <script defer src="js/script.js"></script>
-</head>
-<body>
-  <header>
-    <div class="logo"><img src="assets/logo.png" alt="Logo" /></div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Početna</a></li>
-        <li><a href="about.html">O nama</a></li>
-        <li><a href="gallery.html" class="active">Galerija</a></li>
-        <li><a href="contact.html">Kontakt</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main class="content">
-    <h1>Galerija</h1>
+<section class="gallery-section" id="gallery">
+  <div class="container">
+    <h2>Galerija</h2>
     <div class="gallery-grid">
-      <!-- Zameni ove slike svojim kada ih budeš imao -->
-      <img src="slika.img" alt="Akcija 1" />
-      <img src="assets/sample2.jpg" alt="Akcija 2" />
-      <img src="assets/sample3.jpg" alt="Akcija 3" />
-      <img src="assets/sample4.jpg" alt="Akcija 4" />
+      <img src="assets/slike/akcija1.jpg" alt="Akcija na terenu 1">
+      <img src="assets/slike/akcija2.jpg" alt="Akcija na terenu 2">
+      <img src="assets/slike/akcija3.jpg" alt="Akcija na terenu 3">
+      <img src="assets/slike/akcija4.jpg" alt="Akcija na terenu 4">
+      <img src="assets/slike/akcija5.jpg" alt="Akcija na terenu 5">
+      <img src="assets/slike/akcija6.jpg" alt="Akcija na terenu 6">
     </div>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Airsoft Klub Kojot.</p>
-  </footer>
-</body>
-</html>
+  </div>
+</section>
