--- a/contact.html
+++ b/contact.html
@@ -1,37 +1,12 @@
-<!DOCTYPE html>
-<html lang="sr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kontakt | Airsoft Klub Kojot</title>
-  <link rel="stylesheet" href="css/style.css" />
-  <script defer src="js/script.js"></script>
-</head>
-<body>
-  <header>
-    <div class="logo"><img src="assets/logo.png" alt="Logo" /></div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Početna</a></li>
-        <li><a href="about.html">O nama</a></li>
-        <li><a href="gallery.html">Galerija</a></li>
-        <li><a href="contact.html" class="active">Kontakt</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main class="content">
-    <h1>Kontaktiraj nas</h1>
-    <p>Možeš nas kontaktirati putem e-maila ili društvenih mreža:</p>
-    <ul>
-      <li>Email: <a href="mailto:airsoftkojot@example.com">airsoftkojot@example.com</a></li>
-      <li>Instagram: <a href="#">@airsoftkojot</a></li>
-      <li>Facebook: <a href="#">Airsoft Klub Kojot</a></li>
-    </ul>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Airsoft Klub Kojot.</p>
-  </footer>
-</body>
-</html>
+<section class="contact-section" id="contact">
+  <div class="container">
+    <h2>Kontaktirajte nas</h2>
+    <p>Imate pitanja ili želite da se pridružite? Kontaktirajte nas putem obrasca ispod ili na <a href="mailto:info@airsoftklubkojot.com">info@airsoftklubkojot.com</a>.</p>
+    <form class="contact-form" action="https://formspree.io/f/maypzwdb" method="POST">
+      <input type="text" name="name" placeholder="Vaše ime" required>
+      <input type="email" name="email" placeholder="Vaš email" required>
+      <textarea name="message" placeholder="Vaša poruka" required></textarea>
+      <button type="submit" class="btn">Pošalji</button>
+    </form>
+  </div>
+</section>
