--- a/gallery.html
+++ b/gallery.html
@@ -9,5 +9,5 @@
       <img src="assets/slike/akcija5.jpg" alt="Akcija na terenu 5">
       <img src="assets/slike/akcija6.jpg" alt="Akcija na terenu 6">
     </div>
-  </div>
+  </div>n
 </section>
