--- a/about.html
+++ b/about.html
@@ -2,5 +2,5 @@
   <div class="container">
     <h2>O nama</h2>
     <p>Airsoft Klub Kojot je osnovan s ciljem okupljanja entuzijasta koji žele iskusiti timsku igru, strategiju i adrenalinske trenutke na terenu. Naše članstvo je otvoreno za sve uzraste, a pružamo i opremu te treninge za početnike. Organizujemo razne tipove igara – od malih scenarija do velikih turnira sa drugim klubovima u regiji.</p>
-  </div>
+  </div>n
 </section>
