--- a/about.html
+++ b/about.html
@@ -1,6 +1,30 @@
-<section class="about-section" id="about">
-  <div class="container">
-    <h2>O nama</h2>
-    <p>Airsoft Klub Kojot je osnovan s ciljem okupljanja entuzijasta koji žele iskusiti timsku igru, strategiju i adrenalinske trenutke na terenu. Naše članstvo je otvoreno za sve uzraste, a pružamo i opremu te treninge za početnike. Organizujemo razne tipove igara – od malih scenarija do velikih turnira sa drugim klubovima u regiji.</p>
-  </div>
-</section>
+<!DOCTYPE html>
+<html lang="hr">
+<head>
+    <meta charset="UTF-8">
+    <title>O Nama | Airsoft Klub Kojot</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <nav class="navbar">
+        <img src="assets/logo.png" alt="Logo" class="logo">
+        <ul class="nav-links">
+            <li><a href="index.html">Početna</a></li>
+            <li><a href="about.html">O Nama</a></li>
+            <li><a href="gallery.html">Galerija</a></li>
+            <li><a href="contact.html">Kontakt</a></li>
+        </ul>
+    </nav>
+
+    <section class="page-section">
+        <div class="container">
+            <h2>O Nama</h2>
+            <p>Airsoft Klub Kojot osnovan je 2020. godine. Naša misija je okupljanje zaljubljenika u airsoft sport, organizovanje događaja, treninga i turnira, te promoviranje timskog duha i fer igre.</p>
+        </div>
+    </section>
+
+    <footer>
+        © 2025 Airsoft Klub Kojot
+    </footer>
+</body>
+</html>
