--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,31 @@
-<section class="contact-section" id="contact">
-  <div class="container">
-    <h2>Kontaktirajte nas</h2>
-    <p>Imate pitanja ili želite da se pridružite? Kontaktirajte nas putem obrasca ispod ili na <a href="mailto:info@airsoftklubkojot.com">info@airsoftklubkojot.com</a>.</p>
-    <form class="contact-form" action="https://formspree.io/f/maypzwdb" method="POST">
-      <input type="text" name="name" placeholder="Vaše ime" required>
-      <input type="email" name="email" placeholder="Vaš email" required>
-      <textarea name="message" placeholder="Vaša poruka" required></textarea>
-      <button type="submit" class="btn">Pošalji</button>
-    </form>
-  </div>
-</section>
+<!DOCTYPE html>
+<html lang="hr">
+<head>
+    <meta charset="UTF-8">
+    <title>Kontakt | Airsoft Klub Kojot</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <nav class="navbar">
+        <img src="assets/logo.png" alt="Logo" class="logo">
+        <ul class="nav-links">
+            <li><a href="index.html">Početna</a></li>
+            <li><a href="about.html">O Nama</a></li>
+            <li><a href="gallery.html">Galerija</a></li>
+            <li><a href="contact.html">Kontakt</a></li>
+        </ul>
+    </nav>
+
+    <section class="page-section">
+        <div class="container">
+            <h2>Kontakt</h2>
+            <p>Možete nas kontaktirati putem e-maila: <a href="mailto:info@airsoftklubkojot.com">info@airsoftklubkojot.com</a></p>
+            <p>Pratite nas na društvenim mrežama: <a href="#">Facebook</a> | <a href="#">Instagram</a></p>
+        </div>
+    </section>
+
+    <footer>
+        © 2025 Airsoft Klub Kojot
+    </footer>
+</body>
+</html>
