--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="hr">
+<head>
+    <meta charset="UTF-8">
+    <title>Galerija | Airsoft Klub Kojot</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <nav class="navbar">
+        <img src="assets/logo.png" alt="Logo" class="logo">
+        <ul class="nav-links">
+            <li><a href="index.html">Početna</a></li>
+            <li><a href="about.html">O Nama</a></li>
+            <li><a href="gallery.html">Galerija</a></li>
+            <li><a href="contact.html">Kontakt</a></li>
+        </ul>
+    </nav>
 
+    <section class="page-section">
+        <div class="container">
+            <h2>Galerija</h2>
+            <div class="gallery-grid">
+                <img src="assets/slike/slika1.jpg" alt="Slika 1">
+                <img src="assets/slike/slika2.jpg" alt="Slika 2">
+                <img src="assets/slike/slika3.jpg" alt="Slika 3">
+                <!-- Dodaj još slika -->
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        © 2025 Airsoft Klub Kojot
+    </footer>
+</body>
+</html>
