--- a/gallery.html
+++ b/gallery.html
@@ -31,7 +31,14 @@
     </section>
 
     <footer>
-        © 2025 Airsoft Klub Kojot
-    </footer>
+    <div class="footer-content">
+        <p>© 2025 Airsoft Klub Kojot | Dizajn: TvojTim</p>
+        <div class="social-links">
+            <a href="#">Facebook</a> |
+            <a href="#">Instagram</a> |
+            <a href="#">YouTube</a>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
