--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Kontakt | Airsoft Klub Kojot</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/smooth-scroll.js" defer></script>
+    <script src="js/anim.js" defer></script>
 </head>
 <body>
     <nav class="navbar">
