--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Airsoft Klub Kojot</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/smooth-scroll.js" defer></script>
+    <script src="js/anim.js" defer></script>
 </head>
 <body>
     <header class="hero-header">
