--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
         </div>
     </section>
 
+    <section class="partners container fade-in">
+    <h2>Naši Sponzori</h2>
+    <div class="partner-logos">
+        <img src="assets/partner1.png" alt="Partner 1">
+        <img src="assets/partner2.png" alt="Partner 2">
+        <img src="assets/partner3.png" alt="Partner 3">
+    </div>
+</section>
+
    <footer>
     <div class="footer-content">
         <p>© 2025 Airsoft Klub Kojot | Dizajn: TvojTim</p>
