--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,24 @@
         </div>
     </section>
 
+    <section class="newsletter container fade-in">
+    <h2>Prijavi se na naš newsletter</h2>
+    <form>
+        <input type="email" placeholder="Tvoj email" required>
+        <button type="submit">Prijavi se</button>
+    </form>
+</section>
+
+    <section class="contact-form container fade-in">
+    <h2>Kontaktiraj nas</h2>
+    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+        <input type="text" name="name" placeholder="Tvoje ime" required>
+        <input type="email" name="email" placeholder="Tvoj email" required>
+        <textarea name="message" placeholder="Poruka" required></textarea>
+        <button type="submit">Pošalji</button>
+    </form>
+</section>
+
   <footer>
     <div class="footer-content">
         <p>© 2025 Airsoft Klub Kojot | Dizajn: TvojTim</p>
