--- a/index.html
+++ b/index.html
@@ -10,26 +10,35 @@
     <script src="js/anim.js" defer></script>
 </head>
 <body>
-    <header class="hero-header">
-        <div class="overlay">
-            <nav class="navbar">
-                <div class="logo-container">
-                    <img src="assets/logo.png" alt="Airsoft Klub Kojot" class="logo">
-                </div>
-                <ul class="nav-links">
-                    <li><a href="index.html">Početna</a></li>
-                    <li><a href="about.html">O nama</a></li>
-                    <li><a href="gallery.html">Galerija</a></li>
-                    <li><a href="contact.html">Kontakt</a></li>
-                </ul>
-            </nav>
-            <div class="hero-content">
-                <h1>Airsoft Klub Kojot</h1>
-                <p>Vaš tim za adrenalinske avanture i akciju</p>
-                <a href="about.html" class="btn">Saznaj više</a>
-            </div>
+    <header class="hero-slider">
+    <div class="slide fade">
+        <img src="assets/slide1.jpg" alt="Slide 1">
+    </div>
+    <div class="slide fade">
+        <img src="assets/slide2.jpg" alt="Slide 2">
+    </div>
+    <div class="slide fade">
+        <img src="assets/slide3.jpg" alt="Slide 3">
+    </div>
+
+    <div class="overlay">
+        <nav class="navbar">
+            <img src="assets/logo.png" alt="Logo" class="logo">
+            <ul class="nav-links">
+                <li><a href="index.html">Početna</a></li>
+                <li><a href="about.html">O nama</a></li>
+                <li><a href="gallery.html">Galerija</a></li>
+                <li><a href="contact.html">Kontakt</a></li>
+            </ul>
+        </nav>
+        <div class="hero-content">
+            <h1>Dobrodošli u Airsoft Klub Kojot</h1>
+            <p>Pridruži nam se u uzbudljivim airsoft avanturama!</p>
+            <a href="about.html" class="btn">Saznaj više</a>
         </div>
-    </header>
+    </div>
+</header>
+
 
     <section class="about-section">
         <div class="container">
