--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/smooth-scroll.js" defer></script>
     <script src="js/anim.js" defer></script>
+    <script src="js/slider.js" defer></script>
 </head>
 <body>
     <header class="hero-slider">
