--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
         <div class="container">
             <h2>Galerija</h2>
             <div class="gallery-grid">
-                <img src="assets/slika1.jpg" alt="Slika 1">
+                <img src="assets/slika1.jpg" alt="Slika 1"> class="gallery-img">
                 <img src="assets/slike/slika2.jpg" alt="Slika 2">
                 <img src="assets/slike/slika3.jpg" alt="Slika 3">
                 <!-- Dodaj još slika -->
@@ -40,6 +40,12 @@
         </div>
     </div>
 </footer>
+
+    <div id="lightbox" class="lightbox">
+  <span class="close">&times;</span>
+  <img class="lightbox-content" id="lightbox-img" src="" alt="">
+  <div id="caption"></div>
+</div>
     
 </body>
 </html>
