--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
         <div class="container">
             <h2>Galerija</h2>
             <div class="gallery-grid">
-                <img src="assets/slika1.jpg" alt="Slika 1"> class="gallery-img">
+                <img src="assets/slika1.jpg" alt="Slika 1" class="gallery-img">
                 <img src="assets/slike/slika2.jpg" alt="Slika 2">
                 <img src="assets/slike/slika3.jpg" alt="Slika 3">
                 <!-- Dodaj još slika -->
