--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/smooth-scroll.js" defer></script>
     <script src="js/anim.js" defer></script>
+    <script src="js/lightbox.js" defer></script>
 </head>
 <body>
     <nav class="navbar">
