--- a/gallery.html
+++ b/gallery.html
@@ -19,17 +19,28 @@
         </ul>
     </nav>
 
-    <section class="page-section">
-        <div class="container">
-            <h2>Galerija</h2>
-            <div class="gallery-grid">
-                <img src="assets/slika1.jpg" alt="Slika 1" class="gallery-img">
-                <img src="assets/slike/slika2.jpg" alt="Slika 2">
-                <img src="assets/slike/slika3.jpg" alt="Slika 3">
-                <!-- Dodaj još slika -->
-            </div>
-        </div>
-    </section>
+   <section class="gallery container">
+  <h2>Galerija</h2>
+
+  <div class="gallery-group">
+    <h3>Ekipa sa treninga</h3>
+    <div class="gallery-grid">
+      <img src="assets/trening1.jpg" alt="Trening 1" class="gallery-img">
+      <img src="assets/trening2.jpg" alt="Trening 2" class="gallery-img">
+      <img src="assets/trening3.jpg" alt="Trening 3" class="gallery-img">
+    </div>
+  </div>
+
+  <div class="gallery-group">
+    <h3>Susreti/Milsim</h3>
+    <div class="gallery-grid">
+      <img src="assets/takmicenje1.jpg" alt="Takmičenje 1" class="gallery-img">
+      <img src="assets/takmicenje2.jpg" alt="Takmičenje 2" class="gallery-img">
+    </div>
+  </div>
+
+</section>
+
 
     <footer>
     <div class="footer-content">
