--- a/index.html
+++ b/index.html
@@ -40,32 +40,13 @@
     </div>
 </header>
 
-
-    <section class="about-section">
-        <div class="container">
-            <h2>O nama</h2>
-            <p>Airsoft Klub Kojot okuplja zaljubljenike u airsoft iz cijelog regiona. Naša misija je promocija timskog duha, discipline i adrenalina kroz realistične scenarije borbe. Organizujemo treninge, igre i turnire za sve uzraste i nivoe iskustva.</p>
-        </div>
-    </section>
-
-    <section class="gallery-section">
-        <div class="container">
-            <h2>Galerija</h2>
-            <div class="gallery-grid">
-                <img src="assets/slike/slika1.jpg" alt="Akcija 1">
-                <img src="assets/slike/slika2.jpg" alt="Akcija 2">
-                <img src="assets/slike/slika3.jpg" alt="Akcija 3">
-                <img src="assets/slike/slika4.jpg" alt="Akcija 4">
-            </div>
-        </div>
-    </section>
-
-    <section class="contact-section">
-        <div class="container">
-            <h2>Kontaktirajte nas</h2>
-            <p>Za više informacija ili prijave, javite nam se putem emaila <a href="mailto:info@airsoftklubkojot.com">info@airsoftklubkojot.com</a> ili pratite naše društvene mreže.</p>
-        </div>
-    </section>
+     <section class="container">
+    <h2>Galerija kategorije</h2>
+    <ul>
+      <li><a href="trening.html">Trening</a></li>
+      <li><a href="takmicenja.html">Takmičenja</a></li>
+    </ul>
+  </section>
 
     <section class="partners container fade-in">
     <h2>Naši Sponzori</h2>
