--- a/takmicenja.html
+++ b/takmicenja.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Galerija - Takmičenja</title>
-  <link rel="stylesheet" href="css/style.css" />
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
   <script src="js/lightbox.js" defer></script>
 </head>
 <body>
