--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
      <section class="container">
     <h2>Galerija kategorije</h2>
-    <ul>
-      <li><a href="trening.html">Trening</a></li>
-      <li><a href="takmicenja.html">Takmičenja</a></li>
-    </ul>
+<ul>
+  <li><a href="trening.html" class="font-trening">Trening</a></li>
+  <li><a href="takmicenja.html" class="font-takmicenja">Takmičenja</a></li>
+</ul>
   </section>
 
     <section class="partners container fade-in">
