--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
      <section class="container">
     <h2>Galerija kategorije</h2>
     <ul>
-      <li><a href="trening.html">Trening</a></li>
+        <li><a href="trening.html" class="special-font">Trening</a></li>
       <li><a href="takmicenja.html">Takmičenja</a></li>
     </ul>
   </section>
