--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 <li><a href="about.html">O nama</a></li>
                 <li><a href="gallery.html">Galerija</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
+  <li><a href="index.html">Početna</a></li>
+  <li><a href="trening/index.html">Trening</a></li>
+  <li><a href="takmicenja/index.html">Takmičenja</a></li>
             </ul>
         </nav>
         <div class="hero-content">
