--- a/gallery.html
+++ b/gallery.html
@@ -19,26 +19,22 @@
         </ul>
     </nav>
 
-   <section class="gallery container">
+   <section class="gallery-categories container">
   <h2>Galerija</h2>
-
-  <div class="gallery-group">
-    <h3>Ekipa sa treninga</h3>
-    <div class="gallery-grid">
-      <img src="assets/trening1.jpg" alt="Trening 1" class="gallery-img">
-      <img src="assets/trening2.jpg" alt="Trening 2" class="gallery-img">
-      <img src="assets/trening3.jpg" alt="Trening 3" class="gallery-img">
+  <div class="category-grid">
+    <div class="category-card">
+      <a href="gallery/trening.html">
+        <img src="assets/folder-trening.jpg" alt="Trening">
+        <h3>Trening</h3>
+      </a>
+    </div>
+    <div class="category-card">
+      <a href="gallery/susreti.html">
+        <img src="assets/folder-susreti.jpg" alt="Susreti">
+        <h3>Susreti</h3>
+      </a>
     </div>
   </div>
-
-  <div class="gallery-group">
-    <h3>Susreti/Milsim</h3>
-    <div class="gallery-grid">
-      <img src="assets/takmicenje1.jpg" alt="Takmičenje 1" class="gallery-img">
-      <img src="assets/takmicenje2.jpg" alt="Takmičenje 2" class="gallery-img">
-    </div>
-  </div>
-
 </section>
 
 
