--- a/gallery.html
+++ b/gallery.html
@@ -19,19 +19,32 @@
         </ul>
     </nav>
 
-   <section class="gallery-categories container">
+ 
+<section class="gallery-categories container">
   <h2>Galerija</h2>
   <div class="category-grid">
     <div class="category-card">
       <a href="gallery/trening.html">
-        <img src="assets/folder-trening.jpg" alt="Trening">
-        <h3>Trening</h3>
+        <div class="folder-overlay">
+          <div class="folder-images">
+            <img src="assets/trening1.jpg" alt="Trening 1">
+            <img src="assets/trening2.jpg" alt="Trening 2">
+            <img src="assets/trening3.jpg" alt="Trening 3">
+          </div>
+          <div class="folder-label">Slike sa Trening-a</div>
+        </div>
       </a>
     </div>
     <div class="category-card">
       <a href="gallery/susreti.html">
-        <img src="assets/folder-susreti.jpg" alt="Susreti">
-        <h3>Susreti</h3>
+        <div class="folder-overlay">
+          <div class="folder-images">
+            <img src="assets/susreti1.jpg" alt="Milsim 1">
+            <img src="assets/susreti2.jpg" alt="Milsim 2">
+            <img src="assets/susreti3.jpg" alt="Milsim 3">
+          </div>
+          <div class="folder-label">Slike sa Milsim-a</div>
+        </div>
       </a>
     </div>
   </div>
