--- a/gallery.html
+++ b/gallery.html
@@ -20,33 +20,18 @@
     </nav>
 
  
-<section class="gallery-categories container">
+<section class="gallery container">
   <h2>Galerija</h2>
-  <div class="category-grid">
-    <div class="category-card">
-      <a href="gallery/trening.html">
-        <div class="folder-overlay">
-          <div class="folder-images">
-            <img src="assets/trening1.jpg" alt="Trening 1">
-            <img src="assets/trening2.jpg" alt="Trening 2">
-            <img src="assets/trening3.jpg" alt="Trening 3">
-          </div>
-          <div class="folder-label">Slike sa Trening-a</div>
-        </div>
-      </a>
-    </div>
-    <div class="category-card">
-      <a href="gallery/susreti.html">
-        <div class="folder-overlay">
-          <div class="folder-images">
-            <img src="assets/susreti1.jpg" alt="Milsim 1">
-            <img src="assets/susreti2.jpg" alt="Milsim 2">
-            <img src="assets/susreti3.jpg" alt="Milsim 3">
-          </div>
-          <div class="folder-label">Slike sa Milsim-a</div>
-        </div>
-      </a>
-    </div>
+  <div class="gallery-grid">
+    <a href="trening.html" class="folder-box">
+      <div class="folder-image" style="background-image: url('assets/trening-cover.jpg');"></div>
+      <h3>Slike sa Treninga</h3>
+    </a>
+
+    <a href="milsim.html" class="folder-box">
+      <div class="folder-image" style="background-image: url('assets/milsim-cover.jpg');"></div>
+      <h3>Slike sa Milsim-a</h3>
+    </a>
   </div>
 </section>
 
