--- a/trening.html
+++ b/trening.html
@@ -22,9 +22,17 @@
     <section class="container">
         <h2>Slike sa Treninga</h2>
         <div class="gallery-grid">
-            <a href="assets/trening1.jpg" data-lightbox="trening"><img src="assets/trening1.jpg" alt="Trening 1"></a>
-            <a href="assets/trening2.jpg" data-lightbox="trening"><img src="assets/trening2.jpg" alt="Trening 2"></a>
-            <a href="assets/trening3.jpg" data-lightbox="trening"><img src="assets/trening3.jpg" alt="Trening 3"></a>
+            <a href="assets/trening1.jpg" data-lightbox="trening" data-title="Slika sa treninga">
+            <img src="assets/trening1.jpg" alt="Trening 1">
+            </a>
+
+           <a href="assets/trening2.jpg" data-lightbox="trening" data-title="Slika sa treninga 2">
+           <img src="assets/trening2.jpg" alt="Trening 2">
+           </a>
+
+           <a href="assets/milsim1.jpg" data-lightbox="milsim" data-title="Slika sa milsima">
+           <img src="assets/milsim1.jpg" alt="Milsim 1">
+           </a>
             <!-- Dodaj još slika ovdje -->
         </div>
     </section>
