--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,7 @@
     <script src="js/smooth-scroll.js" defer></script>
     <script src="js/anim.js" defer></script>
     <script src="js/lightbox.js" defer></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
@@ -47,6 +48,7 @@
     </div>
 </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"></script>
     
 </body>
 </html>
