--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="js/smooth-scroll.js" defer></script>
     <script src="js/anim.js" defer></script>
     <script src="js/slider.js" defer></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet">
 </head>
 <body>
     <header class="hero-slider">
@@ -61,6 +62,8 @@
     </div>
 </footer>
 
+<link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet">
+    
     <script src="js/script.js"></script>
 </body>
 </html>
