--- a/gallery.html
+++ b/gallery.html
@@ -55,13 +55,13 @@
 </header>
 
 <section class="gallery-category container">
-  <a href="trening.html" class="category-card" style="background-image: url('assets/trening/trening1.jpg');">
+  <a href="gallery.html" class="back-button">⬅ Nazad na galeriju</a>
     <div class="category-overlay">
       <h2>Slike sa Treninga</h2>
     </div>
   </a>
 
-  <a href="milsim.html" class="category-card" style="background-image: url('assets/milsim/milsim1.jpg');">
+  <a href="gallery.html" class="back-button">⬅ Nazad na galeriju</a>
     <div class="category-overlay">
       <h2>Slike sa Milsim-a</h2>
     </div>
