--- a/index.html
+++ b/index.html
@@ -41,6 +41,37 @@
     </div>
 </header>
 
+    <section id="gallery" class="container">
+  <h2>Galerija</h2>
+  <div class="gallery-folders">
+    <div class="folder" onclick="showCategory('trening')">
+      <img src="assets/trening-cover.jpg" alt="Trening">
+      <p>Slike sa Treninga</p>
+    </div>
+    <div class="folder" onclick="showCategory('milsim')">
+      <img src="assets/milsim-cover.jpg" alt="Milsim">
+      <p>Slike sa Milsim-a</p>
+    </div>
+  </div>
+
+  <div id="trening-gallery" class="hidden gallery-grid">
+    <h3>Slike sa Treninga</h3>
+    <img src="assets/trening1.jpg" alt="Trening 1">
+    <img src="assets/trening2.jpg" alt="Trening 2">
+    <!-- Dodaj još slike -->
+    <button onclick="hideCategory()">Nazad</button>
+  </div>
+
+  <div id="milsim-gallery" class="hidden gallery-grid">
+    <h3>Slike sa Milsim-a</h3>
+    <img src="assets/milsim1.jpg" alt="Milsim 1">
+    <img src="assets/milsim2.jpg" alt="Milsim 2">
+    <!-- Dodaj još slike -->
+    <button onclick="hideCategory()">Nazad</button>
+  </div>
+</section>
+
+
 
     <section class="partners container fade-in">
     <h2>Naši Sponzori</h2>
