--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <li><a href="about.html">O nama</a></li>
                 <li><a href="gallery.html">Galerija</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
+                <li><a href="#gallery">Galerija</a></li>
             </ul>
         </nav>
         <div class="hero-content">
