--- a/gallery.html
+++ b/gallery.html
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
-<html lang="sr">
+<html lang="hr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Galerija - Airsoft Klub Kojot</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <meta charset="UTF-8">
+  <title>Galerija</title>
+  <link rel="stylesheet" href="css/style.css">
   <script src="js/script.js" defer></script>
 </head>
 <body>
+  <section class="container">
+    <h2>Galerija</h2>
 
-  <header>
-    <nav class="navbar container">
-      <a href="index.html" class="logo">Airsoft Klub Kojot</a>
-      <ul class="nav-links">
-        <li><a href="index.html">Početna</a></li>
-        <li><a href="gallery.html" class="active">Galerija</a></li>
-        <li><a href="about.html">O nama</a></li>
-        <li><a href="contact.html">Kontakt</a></li>
-      </ul>
-    </nav>
-  </header>
+    <div class="gallery-folders">
+      <div class="folder" onclick="showCategory('trening')">
+        <img src="assets/trening-cover.jpg" alt="Trening">
+        <p>Slike sa Treninga</p>
+      </div>
+      <div class="folder" onclick="showCategory('milsim')">
+        <img src="assets/milsim-cover.jpg" alt="Milsim">
+        <p>Slike sa Milsim-a</p>
+      </div>
+    </div>
 
-  <main class="container">
+    <div id="trening-gallery" class="hidden">
+      <h3>Slike sa Treninga</h3>
+      <div class="gallery-grid">
+        <img src="assets/trening1.jpg" alt="Trening 1">
+        <img src="assets/trening2.jpg" alt="Trening 2">
+        <!-- Dodaj još slika -->
+      </div>
+      <button onclick="hideCategory()">Nazad</button>
+    </div>
 
-    <section id="gallery">
-      <h2>Galerija</h2>
-      <div class="gallery-folders">
-        <div class="folder" onclick="showCategory('trening')">
-          <img src="assets/trening-cover.jpg" alt="Trening" />
-          <p>Slike sa Treninga</p>
-        </div>
-        <div class="folder" onclick="showCategory('milsim')">
+    <div id="milsim-gallery" class="hidden">
+      <h3>Slike sa Milsim-a</h3>
+      <div class="gallery-grid">
+        <img src="assets/milsim1.jpg" alt="Milsim 1">
+        <img src="assets/milsim2.jpg" alt="Milsim 2">
+        <!-- Dodaj još slika -->
+      </div>
+      <button onclick="hideCategory()">N
