--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
     <h2>Galerija</h2>
 
     <div class="gallery-folders">
-      <div class="folder" onclick="showCategory('trening')">
+        <div class="folder fade-in" onclick="showCategory('trening')">
         <img src="assets/trening-cover.jpg" alt="Trening">
         <p>Slike sa Treninga</p>
       </div>
