--- a/gallery.html
+++ b/gallery.html
@@ -15,12 +15,18 @@
         <img src="assets/trening-cover.jpg" alt="Trening">
         <p>Slike sa Treninga</p>
       </div>
-      <div class="folder" onclick="showCategory('milsim')">
+      <div class="folder fade-in" onclick="showCategory('milsim')">
         <img src="assets/milsim-cover.jpg" alt="Milsim">
         <p>Slike sa Milsim-a</p>
       </div>
     </div>
 
+  <div id="trening-gallery" class="hidden gallery-grid"></div>
+  <div id="milsim-gallery" class="hidden gallery-grid"></div>
+
+    <button onclick="hideCategory()">Nazad</button>
+    </section>
+  
     <div id="trening-gallery" class="hidden">
       <h3>Slike sa Treninga</h3>
       <div class="gallery-grid">
@@ -39,3 +45,14 @@
         <!-- Dodaj još slika -->
       </div>
       <button onclick="hideCategory()">N
+
+<!-- Lightbox -->
+<div id="lightbox" class="hidden">
+  <span class="close" onclick="closeLightbox()">&times;</span>
+  <img id="lightbox-img" src="" alt="">
+  <div class="nav">
+    <span class="prev" onclick="prevImage()">&#10094;</span>
+    <span class="next" onclick="nextImage()">&#10095;</span>
+  </div>
+</div>
+        
