--- a/gallery.html
+++ b/gallery.html
@@ -55,4 +55,6 @@
     <span class="next" onclick="nextImage()">&#10095;</span>
   </div>
 </div>
-        
+
+        <script src="js/gallery.js"></script>
+
