--- a/gallery.html
+++ b/gallery.html
@@ -7,11 +7,12 @@
   <script src="js/script.js" defer></script>
 </head>
 <body>
+
   <section class="container">
     <h2>Galerija</h2>
 
     <div class="gallery-folders">
-        <div class="folder fade-in" onclick="showCategory('trening')">
+      <div class="folder fade-in" onclick="showCategory('trening')">
         <img src="assets/trening-cover.jpg" alt="Trening">
         <p>Slike sa Treninga</p>
       </div>
@@ -21,12 +22,6 @@
       </div>
     </div>
 
-  <div id="trening-gallery" class="hidden gallery-grid"></div>
-  <div id="milsim-gallery" class="hidden gallery-grid"></div>
-
-    <button onclick="hideCategory()">Nazad</button>
-    </section>
-  
     <div id="trening-gallery" class="hidden">
       <h3>Slike sa Treninga</h3>
       <div class="gallery-grid">
@@ -44,17 +39,20 @@
         <img src="assets/milsim2.jpg" alt="Milsim 2">
         <!-- Dodaj još slika -->
       </div>
-      <button onclick="hideCategory()">N
+      <button onclick="hideCategory()">Nazad</button>
+    </div>
+  </section>
 
-<!-- Lightbox -->
-<div id="lightbox" class="hidden">
-  <span class="close" onclick="closeLightbox()">&times;</span>
-  <img id="lightbox-img" src="" alt="">
-  <div class="nav">
-    <span class="prev" onclick="prevImage()">&#10094;</span>
-    <span class="next" onclick="nextImage()">&#10095;</span>
+  <!-- Lightbox -->
+  <div id="lightbox" class="hidden">
+    <span class="close" onclick="closeLightbox()">&times;</span>
+    <img id="lightbox-img" src="" alt="">
+    <div class="nav">
+      <span class="prev" onclick="prevImage()">&#10094;</span>
+      <span class="next" onclick="nextImage()">&#10095;</span>
+    </div>
   </div>
-</div>
 
-        <script src="js/gallery.js"></script>
-
+  <script src="js/gallery.js"></script>
+</body>
+</html>
