--- a/gallery.html
+++ b/gallery.html
@@ -38,6 +38,16 @@
     <button onclick="hideCategory()">Nazad</button>
   </div>
 </section>
+  
+<!-- Lightbox -->
+<div id="lightbox" class="hidden">
+  <span class="close" id="lightbox-close">&times;</span>
+  <img id="lightbox-img" src="" alt="" />
+  <div class="nav">
+    <span class="prev" id="lightbox-prev">&#10094;</span>
+    <span class="next" id="lightbox-next">&#10095;</span>
+  </div>
+</div>
 
 
 </body>
