--- a/gallery.html
+++ b/gallery.html
@@ -41,6 +41,19 @@
 </section>
 
 
+  
+
+  <div class="gallery-grid">
+  <img src="assets/trening1.jpg" alt="Trening 1" class="lightbox-trigger">
+  <img src="assets/trening2.jpg" alt="Trening 2" class="lightbox-trigger">
+  <img src="assets/trening3.jpg" alt="Trening 3" class="lightbox-trigger">
+</div>
+
+<div id="simple-lightbox" class="hidden">
+  <span id="lightbox-close">&times;</span>
+  <img id="lightbox-image" src="" alt="">
+</div>
+
 
 </body>
 </html>
